Bug 390847 - Saving an encapsulated message doesn't work
Summary: Saving an encapsulated message doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.7.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-21 15:48 UTC by Albert Astals Cid
Modified: 2018-02-22 12:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2018-02-21 15:48:11 UTC
How to reproduce:
 * right click on "encapsulated message"
 * On the menu, select "Save as"
 * Select a filename
 * The file is created but it is 0 bytes

Maybe related? 
 * Right click on "encapsulated message" and open does nothing
 * Right click and properties says 0 bytes


As alternative if i left click on "encapsulated message" and then on the window that has been opened i click File->Save it works fine
Comment 1 Laurent Montel 2018-02-22 06:53:13 UTC
I confirm this bug.
I started to investigate it with your test case.
Comment 2 Laurent Montel 2018-02-22 12:56:55 UTC
Git commit 24a0231002b3f1dbb276449c4961fabfcffe9e34 by Laurent Montel.
Committed on 22/02/2018 at 12:56.
Pushed by mlaurent into branch 'master'.

Fix [kmail2] [Bug 390847] New: Saving an encapsulated message doesn't work

FIXED-IN: 18.04.0

M  +20   -0    messageviewer/src/viewer/viewer_p.cpp

https://commits.kde.org/messagelib/24a0231002b3f1dbb276449c4961fabfcffe9e34