Fix [kmail2] [Bug 390847] New: Saving an encapsulated message doesn't work

FIXED-IN: 18.04.0
BUG: 390847